style.css
* {
	font-family: var(--global-code-font) !important;
}

.notifications ol .lextoast .lextoastcontent .desc {
	transition: all 0.5s cubic-bezier(.42, .97, .52, 1.19);
}

.notifications ol.list .lextoast .lextoastcontent .desc {
	word-wrap: break-word;
	white-space: normal;
}

.channel-title {
	background-color: var(--global-blur-background);
	--webkit-backdrop-filter: blur(8px);
	backdrop-filter: blur(8px);
	border-bottom-left-radius: 8px;
	border-bottom-right-radius: 8px;
	text-align: center;
}

.lexmenubar {
	background-color: var(--global-blur-background);
}

.lexareatabs.row {
	background: none !important;
}

.lexareatabs.row .lexareatab {
	border-top-left-radius: 8px !important;
	border-top-right-radius: 8px !important;
	border: none !important;
}

.lexareatabs.row .lexareatab.selected {
	border: none !important;
	background-color: light-dark(var(--global-color-secondary), var(--global-medium-background)) !important;
}

.lexcodearea {
	border-top-right-radius: 8px !important;
	overflow: hidden;
}

.custom-parameters-panel .lexnumber input {
	field-sizing: content;
}

.shader-item {
    grid-column-end: span 1;
    grid-row-end: span 1;
    aspect-ratio: 1 / 0.8;
}

.shader-item.shader-profile {
    aspect-ratio: 1 / 0.725;
}

.channel-list {
	grid-template-columns:repeat(4, 1fr);
}

@media (min-width: 0px) {
	.shader-list {
		grid-template-columns:repeat(1, 1fr);
	}
}

@media (min-width: 785px) {
	.shader-list {
		grid-template-columns:repeat(2, 1fr);
	}
}

@media (min-width: 1180px) {
	.shader-list {
		grid-template-columns:repeat(3, 1fr);
	}
}

@media (min-width: 1560px) {
	.shader-list {
		grid-template-columns:repeat(4, 1fr);
	}
}

@media screen and (max-width: 992px) {
    .content-area {
		flex-direction: column;
	}

	.content-area > * {
		width: 100% !important;
	}

	:root, :root body {
    	overflow-y: auto;
	}

	.channel-list {
		grid-template-columns:repeat(1, 1fr);
	}
}

